# odin-protoc-plugin

./: .gitignore  CMakeLists.txt  README.md
protobuf/: odin.proto
source/: odin-code-generator.cpp
